# da-rag-project-jlcampbell12

./: pyproject.toml  readme_setup.md
data/vector_store/: default__vector_store.json  docstore.json  index_store.json
notebooks/: 01_ingestion.ipynb  02_retrieval.ipynb  03_rag.ipynb
notebooks/.ipynb_checkpoints/: 01_ingestion-checkpoint.ipynb
src/: ingestion.py  main.py  rag.py  retrieval.py
tests/: test_00_smoke.py  test_10_ingestion.py  test_20_retrieval.py  test_30_rag.py
